      decrypted form is no different from its backed up file

      The Working, Home, Documents & Desktop directory can't
      be selected anymore as the Key Directory, making users
      actively select the Key Directory for Key Dir awareness

      The Key Directory is now only selected by going INTO the
      Key Directory. Key Dir Selection is now more uniform

      Replaced UTF8 symbols fixed instability on Ubuntu 19.04

5.4.1 Disabled clone modification time after encrypting files
      -Re-encrypting files without modifying them now results
       in totally different encrypted file and key file pairs
       Therefor the modification timestamp should also change
       Differential backup ignores files with unmodified time

       Improved User Interrupted key file deletion and logging
       Fixed file progressbar during the create key file phase
5.4.0 Re-encryption now forces new Key Creation
      Decryption also deletes existing key file

      Disabled animation, sound & voice on first use
      Removed some UTF8 symbols fixing Linux instability
5.3.1 Added non interactive print scan results to CLI
      Corrected print Write / Matched Key Path in CLI
5.3.0 Added Show Password Tooltip with fontsize 14px
      Added Print scanresults Command Line Interface
      Print scanresults notes:
      FinalCrypt crashes on Ubuntu 19.04 outside JVM
      due to new font rendering library libpango-1.0
      This update allows full feature fallback to CLI
      This bug is reported. Ubuntu 18 is not affected
5.2.1 Fixed Audio System instability on Linux
      Added delete button visible on all OSes
5.2.0 SecureRandom Number Generator extra Secured
      Decrypt, Remove Keys & Re-encrypt to Secure
      User delete also deletes matching Key Items
      Audio System code cleaned up and improved
      Added Key Match & Key Write User-Printing
      Added Key Directory Full Path show Tooltip
5.1.1 New Audio System for better (audio) stability